Small fix to hide x scrollbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,5 +16,4 @@
     /* Margins at 0 so they force the div to center */
     margin-left: auto;
     margin-right: auto;
-    overflow-x: hidden; /* Do not show content outside this container */
 }
